prise en compte des regles de like epingle

--- a/videos/templates/proj.html
+++ b/videos/templates/proj.html
@@ -388,6 +388,8 @@ function like(val,link){
 				 `;
          c=parseInt(document.getElementById('proj_nb_jaime').innerHTML);
          document.getElementById('proj_nb_jaime').innerHTML=c-1;
+				 document.getElementById('proj_epingle_id_+{{proj.id}}').innerHTML="";
+
         }
       }
     });
