--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -7,6 +7,7 @@ a {
    outline: 0 !important;
    text-shadow: none !important;
 }
+
 :-moz-any-link {
   outline: 0 !important;
   text-shadow: none !important;
@@ -17,22 +18,47 @@ a {
 text-decoration:none !important;
 }
 
-#central {
+/* #central {
     position: absolute;
     top: 0;
     bottom:0;
     left: 0;
     right: 0;
+   background: red;
+} */
 
+.navbar-header form {
+    /* position: absolute;
+    left:100px; */
 }
 
+@media only screen and (max-width:768px){
+    .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+        border-color: rgba(0,0,0,0);
+        margin-top: 0;
+    }
+    .navbar-form {
+        padding: 10px 15px;
+        margin-top:-2px;
+        margin-left:0px;
+        border-top: 0px solid transparent;
+        border-bottom: 0px solid transparent;
+        -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1),0 1px 0 rgba(255,255,255,.1);
+        box-shadow: inset 0 1px 0 rgba(255,255,255,.1),0 0px 0 rgba(255,255,255,.1);
+    }
+}
 
+.top_bar{
+  background-color: white;
+}
 
 body{
     overflow-y:scroll;
+   
 }
 
 #body {
+   padding-top: 70px; 
     display: table;
     margin: 0 auto;
     margin-top: 60px;
@@ -182,15 +208,17 @@ Style de la Lateral Bar
   width: 1950px;
 }
 
+.input_group_search{
+  max-width: 612px;
+}
+
 form .biginput {
-  width: 612px;
-  height: 25px;
-  margin-left: 6px;
+  max-width: 612px;
+  width:100%;
+  height: 34px;
   padding: 0 4px 0 4px;
   background-color: #fff;
   border: 1px solid #c8c8c8;
-
-
   box-shadow: 0px 0px 10px -9px black inset;
   color:#858585;
   font-weight:normal;
@@ -218,24 +246,12 @@ form .biginput:focus {
 
 #titre_site{
     font-weight: 900;
-    padding-top: 4px;
-    padding-bottom: 4px;
-    text-align: center;
-
-    margin: 0;
-    margin-left: 50px;
-    height:40px;
     color:#FDC500;
-
-    text-align:center;
-
+    font-size: 30px;
+    
     -webkit-transition: all 2s linear;
     -moz-transition: all 2s linear;
     transition: all 2s linear;
-
-    padding-right: 53.5px;
-    padding-left: 53px;
-
 }
 
 #titre_site:hover{
@@ -1356,7 +1372,7 @@ padding-top: 5px;
   margin-top: 7px;
 }
 
-.container{
+.container_no_bs{
   background-color: white;
   box-shadow: 0px 0px 10px -7px;
   padding-left: 10px;
@@ -1396,7 +1412,7 @@ padding-top: 5px;
     margin-bottom: -10px;
   }
 
-.container h1{
+.container_no_bs h1{
   padding-top: 8px;
   font-size:18px;
   font-weight:500;
@@ -1404,18 +1420,18 @@ padding-top: 5px;
   margin-bottom: 5px;
 }
 
-.container ul{
+.container_no_bs ul{
   list-style-type: none;
   display: table;
   margin: 0 auto;
   padding: 0;
 }
 
-.container li{
+.container_no_bs li{
   display: inline-block;
 }
 
-.container li a {
+.container_no_bs li a {
     display: inline-block;
     color: #444444;
     text-align: center;
@@ -1423,7 +1439,7 @@ padding-top: 5px;
     text-decoration: none;
 }
 
-.container li a:hover {
+.container_no_bs li a:hover {
     background-color: #444444;
     color:white;
     text-decoration: none;
@@ -2170,7 +2186,7 @@ transition: all 0.1s linear;
   .container_hr{
     width: 660px;
   }
-    .container {
+    .container_no_bs {
         width: 640px;
     }
 
@@ -2219,7 +2235,7 @@ transition: all 0.1s linear;
   .container_hr{
     width: 875px;
   }
-    .container {
+    .container_no_bs {
         width: 855px;
     }
 
@@ -2237,7 +2253,7 @@ transition: all 0.1s linear;
     .container_hr{
       width: 1300px;
     }
-    .container {
+    .container_no_bs {
           width: 1280px;
     }
 
