--- a/videos/templates/index.html
+++ b/videos/templates/index.html
@@ -4,8 +4,9 @@
 
 {% load app_filters %}
 
+
 {% if categories %}
-	<div class="container">
+	<div class="container_no_bs">
 		<h1>Catégories</h1>
 			<ul>
 			{% for c in categories %}
