--- a/videos/templates/tags.html
+++ b/videos/templates/tags.html
@@ -2,7 +2,7 @@
 {% block body %}
 
 {% if tags %}
-<div class="container">
+<div class="container_no_bs">
 	<h1>Tags</h1>
 		{% for t in tags %}
 	    <a class="tag"  href="{% url 'tag' t.id 1 %}">{{ t.titre }}</a>
