--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -18,35 +18,18 @@ a {
 text-decoration:none !important;
 }
 
-/* #central {
+ #central {
     position: absolute;
     top: 0;
     bottom:0;
     left: 0;
     right: 0;
-   background: red;
-} */
 
-.navbar-header form {
-    /* position: absolute;
-    left:100px; */
-}
+} 
 
-@media only screen and (max-width:768px){
-    .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
-        border-color: rgba(0,0,0,0);
-        margin-top: 0;
-    }
-    .navbar-form {
-        padding: 10px 15px;
-        margin-top:-2px;
-        margin-left:0px;
-        border-top: 0px solid transparent;
-        border-bottom: 0px solid transparent;
-        -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.1),0 1px 0 rgba(255,255,255,.1);
-        box-shadow: inset 0 1px 0 rgba(255,255,255,.1),0 0px 0 rgba(255,255,255,.1);
-    }
-}
+
+
+
 
 .top_bar{
   background-color: white;
@@ -61,7 +44,7 @@ body{
    padding-top: 70px; 
     display: table;
     margin: 0 auto;
-    margin-top: 60px;
+
     overflow: scroll;
     overflow-y:scroll;
     /*padding-left:220px; SI ON RAJOUTE LA BARRE*/
@@ -91,7 +74,7 @@ Style de la bar de navigation
 #navigation_bar{
 
     overflow: hidden;
-
+    
     z-index: 1;
     display: table;
     background-color: white;
@@ -215,7 +198,9 @@ Style de la Lateral Bar
 form .biginput {
   max-width: 612px;
   width:100%;
-  height: 34px;
+ height: 25px;
+ margin-left: 6px;
+  
   padding: 0 4px 0 4px;
   background-color: #fff;
   border: 1px solid #c8c8c8;
@@ -226,6 +211,8 @@ form .biginput {
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
   transition: all 0.2s linear;
+
+
 }
 form .biginput:hover{
   border-color: rgb(170, 170, 170);
@@ -245,13 +232,24 @@ form .biginput:focus {
 
 
 #titre_site{
-    font-weight: 900;
+        font-weight: 900;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    text-align: center;
+
+    margin: 0;
+    margin-left: 50px;
+    height:40px;
     color:#FDC500;
-    font-size: 30px;
-    
+
+    text-align:center;
+
     -webkit-transition: all 2s linear;
     -moz-transition: all 2s linear;
     transition: all 2s linear;
+
+    padding-right: 53.5px;
+    padding-left: 53px;
 }
 
 #titre_site:hover{
