--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -581,14 +581,15 @@ Concerne l'affichage des légendes des vidéos
 }
 
 .legende_vid_titre{
-  color:#167AC6;
-  width: 200px;
-  max-height: 40px;
+  /* color:#167AC6; */
+  color:rgb(22, 122, 198);
+  width:100%;
+  max-height: 34px;
   overflow: hidden;
   text-decoration: none;
   font-size: 13px;
   font-weight:500 !important;
-
+  line-height: 16.9px;
 }
 
 
@@ -2268,29 +2269,32 @@ transition: all 0.1s linear;
 
 @media screen and (max-width: 700px)  {
   #video {
-        width: 432px;
-        height: 243px;
+    width:100%;
+    height: 100%;
+        /* width: 432px;
+        height: 243px; */
     }
 
     .commentaires_video {
-      max-width: 412px;
+      /* max-width: 412px; */
     }
 
     .titre_et_vues{
-      width: 412px;}
+      /* width: 412px; */
+    }
 
       .titre_proj_nouv{
-        width: 432px;
+        /* width: 432px; */
       }
 
       .description_video{
-        width:412px;
+        /* width:412px; */
       }
 
       .suggestion {
         margin-top: 10px;
         display: block;
-        width: 432px;
+        /* width: 432px; */
         padding-right: 0px;
         padding-left: 0px;
 
