Mise en commun de l'affichage des blocs videos et projs dans toutes les pages

--- a/videos/templates/index.html
+++ b/videos/templates/index.html
@@ -10,7 +10,7 @@
 		<h1>Catégories</h1>
 			<ul>
 			{% for c in categories %}
-		    <li><a href="{% url 'category' c.id 1 %}">{{ c.titre|short }}</a></li>
+		    	<li><a href="{% url 'category' c.id 1 %}">{{ c.titre|short }}</a></li>
 			{% endfor %}
 			</ul>
 
@@ -20,41 +20,10 @@
 	<hr class="container_hr">
 	<h1>Projs</h1>
 
-		<div class="liste_videos">
+		<div class="row">
 			{% for p in projs %}
-
-				<div class="bloc_video">
-
-			    <a href="{% url 'proj' p.id %}">
-			        <figure class="figure_liste">
-									<img class="img_vid" src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Aspect_ratio_16_9_example.jpg"/>
-									<div class="legende_vid_duree">
-											  {{p|duration_proj}}
-									</div>
-
-			        </figure>
-			    </a>
-
-					<a href="{% url 'proj' p.id %}">
-							<div class="legende_vid_titre">
-									{{p.titre|short}}
-							</div>
-					</a>
-
-					<div class="legende_vid_auteur">
-						<a href="{% url 'jtx' 2015 %}">
-								JTX 20{{ p | short_promo }}
-						</a>
-					</div>
-					<div class="legende_vid_auteur">
-								  {{p.views}}
-								 vues
-								 <span class="petit_point">&#9679;</span>
-
-								  {{ p.date|date:"d/m/Y" }}
-					</div>
-				</div>
-		{% endfor %}
+				{% include "block_video_proj_liste.html" with video=0 elmt=p %}
+			{% endfor %}
 		</div>
 
 {% endif %}
@@ -62,39 +31,9 @@
 {% if videos %}
 	<hr class="container_hr">
 	<h1>Vidéos</h1>
-	<div class="liste_videos">
-
+	<div class="row">
 		{% for v in videos %}
-		<div class="bloc_video">
-			<a href="{% url 'video' v.id %}">
-			<figure class="figure_liste">
-					<img class="img_vid" src="{{v.url}}.png"/>
-					<figcaption class="legende_vid_duree">
-							{{v|duration}}
-					</figcaption>
-
-			</figure>
-			</a>
-
-			<a href="{% url 'video' v.id %}">
-					<div class="legende_vid_titre">
-							{{v.titre|short}}
-					</div>
-			</a>
-
-			<div class="legende_vid_auteur">
-				{% autoescape off %}
-					{{ v|auteurs}}
-				{% endautoescape %}
-			</div>
-			<div class="legende_vid_auteur">
-							{{v.views}}
-						 vues
-						 <span class="petit_point">&#9679;</span>
-
-						  {{ v.date|date:"d/m/Y" }}
-			</div>
-		</div>
+			{% include "block_video_proj_liste.html" with video=1 elmt=v %}
 		{% endfor %}
 
 {% endif %}
