--- a/videos/templates/videos.html
+++ b/videos/templates/videos.html
@@ -8,80 +8,7 @@
 <!-- liste_videos -->
 <div class="row">
 	{% for v in elements %}
-
-	<!-- bloc_video -->
-	<div class="col-lg-2 col-md-3 col-sm-4 col-xs-12 " style="margin-bottom:20px;">
-		<div class="row" style="padding:5px;">
-		<!-- <img class="" src="{{v.url}}.png" /> -->
-		
-		<a href="{% url 'video' v.id %}" style="background-color:aqua;width:250px;">
-			<!-- figure_liste -->
-		<figure class="" style="width:100%;min-width:200px;">
-				 <img class="" src="{{v.url}}.png" style="width:100%;min-width:200px;"/> 
-				<figcaption class="legende_vid_duree">
-						{{v|duration}}
-						
-				</figcaption>
-
-		</figure>
-		</a>
-
-
-		<a href="{% url 'video' v.id %}" class='col-xs-12'  style="padding:0;" >
-				<div class="legende_vid_titre">
-						{{v.titre|short}}
-				</div>
-		</a>
-
-	
-
-	  <!-- legende_vid_auteur -->
-
-		<div class="col-xs-12" id="auteur_{{v.id}}" style="padding:0;font-size:11px;">
-			{% autoescape off %}
-				{{ v|auteurs}}
-			{% endautoescape %}
-		</div>
-		
-		
-		  
-	  <!-- legende_vid_auteur -->
-		<div class="col-xs-12"  style="padding:0;color:rgb(118, 118, 118);font-size:11px;">
-						{{v.views}}
-					 vues
-					 <span class="petit_point">&#9679;</span>
-
-					 {{ v.date|date:"d/m/Y" }}
-		</div>
-					
-		<span class="col-xs-8 text-left align-top"  style="padding:0;display:inline-block;vertical-align:middle;" >
-			{% if v.category.titre.lower == 'proj jtx' %}
-				
-				{% for r in v.relation_proj_set.all  %}
-					<a class='titre_et_vues_info_cat_proj tag '  href="{% url 'proj' r.proj.id %}" style="font-size:9px; margin-right:0px;">PROJ</a>
-				{% endfor %}
-			{% elif v.category.titre.lower == 'amphi binets' %}
-		
-				{% for r in v.relation_proj_set.all  %}
-					<a class='titre_et_vues_info_cat_amphi tag' href="{% url 'proj' r.proj.id %}">BINETS</a>
-				{% endfor %}
-			{% elif v.category.titre.lower == 'semaine internationale' %}
-			
-				{% for r in v.relation_proj_set.all  %}
-					<a class='titre_et_vues_info_cat_semaine tag' href="{% url 'proj' r.proj.id %}">S.INT.</a>
-				{% endfor %}
-			{% elif v.category.titre.lower == "coupe de l'x" %}
-		
-				{% for r in v.relation_proj_set.all  %}
-					<a class='titre_et_vues_info_cat_coupe tag' href="{% url 'proj' r.proj.id %}">COUPE</a>
-				{% endfor %}
-		{% endif %}
-		<span class="glyphicon glyphicon-pushpin" style="display:inline-block; width:10px;margin-left:5px; opacity:0.53;"></span>
-		<span class="glyphicon glyphicon-thumbs-up"  style="display:inline-block; width:10px;margin-left:5px;opacity:0.53;"></span>
-	  </span>
-
-	</div>
-	</div>
+		{% include "block_video_proj_liste.html" with video=1 v=v %}
 	{% endfor %}
 </div>
 
