--- a/videos/templates/block_video_proj_liste.html
+++ b/videos/templates/block_video_proj_liste.html
@@ -5,26 +5,26 @@
     <div class="row" style="padding:5px;">
         
         {% if video %}
-            <a href="{% url 'video' elmt.id %}" style="width:250px;">
+            <a href="{% url 'video' elmt.id %}" style="width:250px; ">
         {% else %}
             <a href="{% url 'proj' elmt.id %}" style="width:250px;">
         {% endif %}
                 <!-- figure_liste -->
-                <figure class="" style="width:100%;min-width:200px;">
+                <figure class="" style="width:100%;min-width:200px;margin-bottom:2px;" >
 
                      {% if video %}
                     <img class="" src="{{elmt.url}}.png" style="width:100%;min-width:200px;" />
                     {% else %}
-                    <img class="img_vid" src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Aspect_ratio_16_9_example.jpg"/>
+                    <img class="" src="{{elmt.image}}"  style="width:100%;min-width:200px;"/>
                     {% endif %}
 
-                    <figcaption class="legende_vid_duree">
+                     <figcaption class="legende_vid_duree" >
                         {% if video %}
                             {{elmt|duration}}
                          {% else %}
                             {{elmt|duration_proj}}
                          {% endif %}
-                    </figcaption>   
+                    </figcaption>    
                 </figure>
             </a>
 
@@ -32,7 +32,7 @@
         {% if video %}
             <a href="{% url 'video' v.id %}" class='col-xs-12' style="padding:0;">
         {% else %}
-            <a href="{% url 'proj' elmt.id %}" class='col-xs-12' style="padding:0;">
+            <a href="{% url 'proj' elmt.id %}" class='col-xs-12' style="padding:0;background-color:blue;">
         {% endif %}
         
             <div class="legende_vid_titre">
