--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -72,7 +72,7 @@
   </div>
   <!-- A changer pour mettre un lien absolu! -->
 
-
+  <div id="lateral_bar">
 
       {% if request.user.is_authenticated %}
           <h3>Bonjour {{ request.user.first_name }} {{ request.user.last_name }}</h3>
@@ -194,7 +194,7 @@
         </a>
 
       {% endif %}
-  </div>
+
 
 
 
