--- a/videos/templates/videos.html
+++ b/videos/templates/videos.html
@@ -8,7 +8,7 @@
 <!-- liste_videos -->
 <div class="row">
 	{% for v in elements %}
-		{% include "block_video_proj_liste.html" with video=1 v=v %}
+		{% include "block_video_proj_liste.html" with video=1 elmt=v %}
 	{% endfor %}
 </div>
 
