--- a/videos/templates/proj.html
+++ b/videos/templates/proj.html
@@ -144,7 +144,7 @@
 
 
   <div class="description_video_proj" id="ls_vid">
-    <table id="proj_elements" class="display">
+    <table id="proj_elements" class="table  ">
       <thead>
         <tr>
           <th>Ordre</th>
