--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -1,6 +1,6 @@
 
 * {
-    font-family: Roboto;
+    /* font-family: Roboto; */
 }
 
 a {
@@ -60,7 +60,7 @@ body{
 }*/
 
 body {
-    background-color: #f1f1f1;
+     background-color: #f1f1f1; 
 }
 
 
@@ -557,8 +557,8 @@ Concerne l'affichage des légendes des vidéos
   
   float: right;
   position: relative;
-  top:-25px;
-  left:-3px;
+  top:-27px;
+  left:-5px;
 
   padding-left: 3px;
   padding-right: 3px;
@@ -711,18 +711,26 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
 
 .titre_et_vues_info_cat_coupe:hover{
   background-color:rgba(230, 126, 34,0.07);
+  color:rgba(230, 126, 34,1.0);
+  text-decoration: none;
 }
 
 .titre_et_vues_info_cat_semaine:hover{
+  color:rgba(192, 57, 43,1.0);
 background-color: rgba(192, 57, 43,0.07);
+text-decoration: none;
 }
 
 .titre_et_vues_info_cat_amphi:hover{
+  color:rgba(155, 89, 182,1.0);
   background-color: rgba(155, 89, 182,0.07);
+  text-decoration: none;
 }
 
 .titre_et_vues_info_cat_proj:hover {
+  color:rgba(39, 174, 96,1);
   background-color: rgba(39, 174, 96,0.07 );
+  text-decoration: none;
 }
 
 .titre_et_vues_titre{
@@ -2348,6 +2356,12 @@ transition: all 0.1s linear;
       }
 }
 @media screen and (min-width: 1300px)  {
+
+
+  .container{
+    width: 1450px;
+    max-width: 1450px;
+  }
     #video {
           width: 864px;
           height:486px;
