--- a/videos/templates/video.html
+++ b/videos/templates/video.html
@@ -4,14 +4,17 @@
 <div style="margin-top:0;display:block">   -->
 <!-- style="margin-top:0;display:table-cell;vertical-align:top;padding-right:10px;" -->
 <div class="row" style="margin:0;">
-  <div class="col-12 col-sm-12 col-md-8 col-lg-8" style="padding:15px; ">
-<!-- 
-    <video id="video" controls autoplay>
-      <source src="{{video.url}}"> Your browser does not support the video tag.
-    </video> -->
+  <div class="col-12 col-sm-12 col-md-8 col-lg-8" style="padding:15px;padding-right:5px;">
+    
+    
+   
+      <video id="video" class="embed-responsive-item" controls autoplay>
+        <source src="{{video.url}}"> Your browser does not support the video tag.
+      </video> 
+        
+    
 
-
-    <div class="col-12" id="" style="background-color:white;padding:10px;">
+    <div class="col-12" id="" style="background-color:white;padding:10px;margin-top:10px;">
 
       <div class=" col-12" style="padding:0;"><h3>{{ video.titre }} </h3></div>
 
@@ -178,20 +181,19 @@
 
     </div>
 
-    <br>
+    
 
-    <div class="col-12" style="background-color:white;padding:10px;">
+    <div class="col-12" style="background-color:white;padding:10px;margin-top:10px;">
       <div class="titre_et_vues_date">Ajoutée le {{ video.date|date:"d/m/Y" }}.</div>
       {{ video.description }}
     </div>
 
 
 
-    <br>
+    
 
 
-
-    <div class="col-12" style="background-color:white;padding:10px;" id="commentaires_video_id">
+    <div class="col-12" style="background-color:white;padding:10px;margin-top:10px;" id="commentaires_video_id">
       <div class="commentaires_video_titre">
         Commentaires
       </div>
@@ -297,7 +299,7 @@
   </div>
 
   <!-- suggestion -->
-  <div class="col-xs-12 col-sm-4 col-lg-4" style="padding:15px;" >
+  <div class="col-xs-12 col-sm-4 col-lg-4" style="padding:15px;padding-left:5px;" >
     <div class="" style="background-color:white;margin:0;padding:20px;">
         <h4>À suivre</h4>
         
